--- a/test_env.ipynb
+++ b/test_env.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,24 +15,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4.8000002e+00 3.4028235e+38 4.1887903e-01 3.4028235e+38]\n",
-      "[-4.8000002e+00 -3.4028235e+38 -4.1887903e-01 -3.4028235e+38]\n",
-      "2\n"
+      "0\n",
+      "0\n",
+      "3\n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "env = gym.make('CartPole-v1')\n",
-    "print(env.observation_space.high)\n",
-    "print(env.observation_space.low)\n",
-    "print(env.action_space.n)"
+    "env = gym.make('FrozenLake-v1',render_mode='human',is_slippery=False)\n",
+    "env.reset()\n",
+    "time.sleep(3)\n",
+    "action = env.action_space.sample()\n",
+    "print(action)\n",
+    "(next_observations,reward,terminated,_,_) = env.step(action)\n",
+    "print(next_observations)\n",
+    "time.sleep(3)\n",
+    "action = env.action_space.sample()\n",
+    "print(action)\n",
+    "(next_observations,reward,terminated,_,_) = env.step(action)\n",
+    "print(next_observations)\n",
+    "env.close()"
    ]
   },
   {
@@ -43,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "0"
       ]
      },
      "execution_count": 15,
